minor fix