@@ -157,25 +157,12 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-test -->
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-test</artifactId>
       <version>4.0.0.RELEASE</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-test-autoconfigure</artifactId>
-      <version>1.5.8.RELEASE</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
-      <version>4.3.12.RELEASE</version>
-    </dependency>
-
 
   </dependencies>
 
@@ -191,7 +178,6 @@
           <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
           <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
           <excludes>
-
             <exclude>**/model/**</exclude>
           </excludes>
         </configuration>
@@ -214,10 +200,6 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.12.1</version>
-        <configuration>
-          <argLine>-server -ea -XX:MaxPermSize=256m -Xmx4g -XX:-UseSplitVerifier ${argLine}
-          </argLine>
-        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
